--- a/packages/mosaic/core/styles/common/_groups.scss
+++ b/packages/mosaic/core/styles/common/_groups.scss
@@ -42,7 +42,7 @@
     }
 
     .mc-group-item + .mc-group-item {
-        margin-left: -$button-size-border-width;
+        margin-left: calc(-1 * var(--mc-button-size-border-width, #{$button-size-border-width}));
     }
 
     & > .mc-group-item:first-child:not(:last-child) {
@@ -79,7 +79,7 @@
         &:first-child:not(:last-child) {
             @include border-bottom-radius(0);
 
-            border-top-right-radius: $button-size-border-radius;
+            border-top-right-radius: var(--mc-button-size-border-radius, $button-size-border-radius);
 
             > .mc-form-field__container {
                 @include border-bottom-radius(0);
@@ -89,7 +89,7 @@
         &:last-child:not(:first-child) {
             @include border-top-radius(0);
 
-            border-bottom-left-radius: $button-size-border-radius;
+            border-bottom-left-radius: var(--mc-button-size-border-radius, $button-size-border-radius);
 
             > .mc-form-field__container {
                 @include border-top-radius(0);
@@ -106,7 +106,7 @@
     }
 
     .mc-group-item + .mc-group-item {
-        margin-top: -$button-size-border-width;
+        margin-top: calc(-1 * var(--mc-button-size-border-width, #{$button-size-border-width}));
     }
     /* stylelint-enable no-descending-specificity */
 }
