--- a/packages/mosaic/list/list.scss
+++ b/packages/mosaic/list/list.scss
@@ -13,11 +13,11 @@
 .mc-list-item,
 .mc-list-option {
     @include mc-list-item-base(
-        $list-size-item-height,
-        $list-size-two-line-height,
-        $list-size-three-line-height,
-        $list-size-multi-line-padding,
-        $list-size-icon-width
+        var(--mc-list-size-item-height, $list-size-item-height),
+        var(--mc-list-size-two-line-height, $list-size-two-line-height),
+        var(--mc-list-size-three-line-height, $list-size-three-line-height),
+        var(--mc-list-size-multi-line-padding, $list-size-multi-line-padding),
+        var(--mc-list-size-icon-width, $list-size-icon-width)
     );
 
     & .mc-pseudo-checkbox {
