--- a/packages/mosaic/datepicker/datepicker-content.scss
+++ b/packages/mosaic/datepicker/datepicker-content.scss
@@ -2,7 +2,8 @@
 
 $mc-datepicker-non-touch-calendar-cell-size: 40px;
 $mc-datepicker-non-touch-calendar-width:
-        $mc-datepicker-non-touch-calendar-cell-size * 7 + $datepicker-calendar-size-padding * 2;
+    $mc-datepicker-non-touch-calendar-cell-size * 7 +
+    var(--mc-datepicker-calendar-size-padding, $datepicker-calendar-size-padding) * 2;
 // Based on the natural height of the calendar in a month with 6 rows of dates
 // (largest the calendar will get).
 $mc-datepicker-non-touch-calendar-height: 344px;
