--- a/packages/mosaic/divider/divider.scss
+++ b/packages/mosaic/divider/divider.scss
@@ -17,21 +17,21 @@
 .mc-divider {
     display: block;
     margin: 0;
-    border-top-width: $divider-size-width;
+    border-top-width: var(--mc-divider-size-width, $divider-size-width);
     border-top-style: solid;
 
     &.mc-divider_vertical {
         border-top: 0;
-        border-right-width: $divider-size-width;
+        border-right-width: var(--mc-divider-size-width, $divider-size-width);
         border-right-style: solid;
     }
 
     &.mc-divider_inset {
-        margin-left: $divider-size-inset-margin;
+        margin-left: var(--mc-divider-size-inset-margin, $divider-size-inset-margin);
 
         [dir='rtl'] & {
             margin-left: auto;
-            margin-right: $divider-size-inset-margin;
+            margin-right: var(--mc-divider-size-inset-margin, $divider-size-inset-margin);
         }
     }
 }
