--- a/packages/mosaic/form-field/form-field.scss
+++ b/packages/mosaic/form-field/form-field.scss
@@ -5,7 +5,7 @@
     position: relative;
     display: inline-block;
     width: 100%;
-    border-radius: $form-field-size-border-radius;
+    border-radius: var(--mc-form-field-size-border-radius, $form-field-size-border-radius);
 
     &:hover {
         z-index: 1;
@@ -21,16 +21,16 @@
 }
 
 .mc-form-field__hint > .mc-hint {
-    margin-top: $form-field-hint-size-margin-top;
+    margin-top: var(--mc-form-field-hint-size-margin-top, $form-field-hint-size-margin-top);
 }
 
 .mc-form-field__container {
     position: relative;
 
-    border-width: $form-field-size-border-width;
+    border-width: var(--mc-form-field-size-border-width, $form-field-size-border-width);
     border-style: solid;
     border-color: transparent;
-    border-radius: $form-field-size-border-radius;
+    border-radius: var(--mc-form-field-size-border-radius, $form-field-size-border-radius);
 }
 
 .mc-form-field_without-borders .mc-form-field__container {
@@ -64,20 +64,20 @@
 .mc-form-field_has-cleaner,
 .mc-form-field_has-stepper {
     .mc-input {
-        padding-right: $form-field-size-button-width;
+        padding-right: var(--mc-form-field-size-button-width, $form-field-size-button-width);
     }
 }
 
 .mc-form-field_has-prefix {
     .mc-input {
-        padding-left: $form-field-size-button-width;
+        padding-left: var(--mc-form-field-size-button-width, $form-field-size-button-width);
     }
 }
 
 .mc-cleaner {
     display: flex;
 
-    width: $form-field-size-button-width;
+    width: var(--mc-form-field-size-button-width, $form-field-size-button-width);
     height: 100%;
 
     cursor: pointer;
@@ -114,12 +114,12 @@ mc-stepper {
     bottom: 0;
     right: 0;
 
-    width: $form-field-size-button-width;
+    width: var(--mc-form-field-size-button-width, $form-field-size-button-width);
 
     .mc-stepper-step-up,
     .mc-stepper-step-down {
         cursor: pointer;
-        width: $form-field-size-button-width;
+        width: var(--mc-form-field-size-button-width, $form-field-size-button-width);
         text-align: center;
     }
 
