--- a/packages/mosaic/navbar/_navbar-base.scss
+++ b/packages/mosaic/navbar/_navbar-base.scss
@@ -13,7 +13,7 @@
 
 %mc-nav-bar-base {
     position: relative;
-    height: $navbar-size-height;
+    height: var(--mc-navbar-size-height, $navbar-size-height);
 
     display: flex;
     flex-direction: row;
@@ -21,7 +21,7 @@
     align-items: center;
 
     [mc-icon] + mc-navbar-title {
-        margin-left: $navbar-size-icon-margin-left;
+        margin-left: var(--mc-navbar-size-icon-margin-left, $navbar-size-icon-margin-left);
     }
 
     [mc-icon] {
@@ -30,7 +30,7 @@
     }
 
     mc-navbar-title:not(.mc-navbar-collapsed-title) + [mc-icon] {
-        margin-left: $navbar-size-icon-margin-left;
+        margin-left: var(--mc-navbar-size-icon-margin-left, $navbar-size-icon-margin-left);
     }
 }
 
@@ -39,18 +39,18 @@
     position: relative;
     display: flex;
     align-items: center;
-    padding-left: $navbar-item-size-padding;
-    padding-right: $navbar-item-size-padding;
+    padding-left: var(--mc-navbar-item-size-padding, $navbar-item-size-padding);
+    padding-right: var(--mc-navbar-item-size-padding, $navbar-item-size-padding);
 }
 
 %mc-navbar-brand-base {
     @extend %mc-navbar-item-base;
     padding-left: 0;
-    padding-right: $navbar-brand-size-padding;
-    margin-right: $navbar-brand-size-margin-right;
+    padding-right: var(--mc-navbar-brand-size-padding, $navbar-brand-size-padding);
+    margin-right: var(--mc-navbar-brand-size-margin-right, $navbar-brand-size-margin-right);
 
     .mc-navbar-title {
-        padding-left: $navbar-brand-size-padding;
+        padding-left: var(--mc-navbar-brand-size-padding, $navbar-brand-size-padding);
         padding-right: 0;
     }
 }
