--- a/packages/mosaic/vertical-navbar/vertical-navbar-item.component.scss
+++ b/packages/mosaic/vertical-navbar/vertical-navbar-item.component.scss
@@ -3,7 +3,7 @@
 
 .mc-vertical-navbar__badge {
     position: absolute;
-    width: $navbar-badge-size-width;
+    width: var(--mc-navbar-badge-size-width, $navbar-badge-size-width);
     top: 0;
     left: 0;
 
@@ -15,10 +15,10 @@
 }
 
 .mc-vertical-navbar__item-icon {
-    margin-right: $vertical-navbar-item-size-icon-margin-right;
+    margin-right: var(--mc-vertical-navbar-item-size-icon-margin-right, $vertical-navbar-item-size-icon-margin-right);
 
     .mc-icon {
-        font-size: $vertical-navbar-item-font-icon-size;
+        font-size: var(--mc-vertical-navbar-item-font-icon-size, $vertical-navbar-item-font-icon-size);
     }
 }
 
@@ -28,7 +28,7 @@
 
 .mc-vertical-navbar__item-dropdown-icon {
     margin-left: auto;
-    padding-left: $vertical-navbar-item-size-padding-horizontal;
+    padding-left: var(--mc-vertical-navbar-item-size-padding-horizontal, $vertical-navbar-item-size-padding-horizontal);
 }
 
 mc-vertical-navbar-item,
@@ -39,10 +39,10 @@ a[mc-vertical-navbar-item] {
 
     position: relative;
 
-    margin: $vertical-navbar-item-size-margin;
+    margin: var(--mc-vertical-navbar-item-size-margin, $vertical-navbar-item-size-margin);
 
     width: 100%;
-    height: $vertical-navbar-item-size-height;
+    height: var(--mc-vertical-navbar-item-size-height, $vertical-navbar-item-size-height);
 
     cursor: pointer;
     text-decoration: none;
@@ -54,8 +54,10 @@ a[mc-vertical-navbar-item] {
         width: 100%;
         height: 100%;
 
-        padding-left: $vertical-navbar-item-size-padding-horizontal;
-        padding-right: $vertical-navbar-item-size-padding-horizontal;
+        padding-left:
+            var(--mc-vertical-navbar-item-size-padding-horizontal, $vertical-navbar-item-size-padding-horizontal);
+        padding-right:
+            var(--mc-vertical-navbar-item-size-padding-horizontal, $vertical-navbar-item-size-padding-horizontal);
     }
 
     &.mc-progress {
